Load files directly into curve buckets
